--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -11,14 +11,7 @@
   <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
   <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
   <script src="https://code.jquery.com/ui/1.10.2/jquery-ui.min.js"></script>
-  <script>
-      $(function () {
-          $(".alumni-select").autocomplete({
-              source: "/api/get_alumni/",
-              minLength: 2,
-          });
-      });
-  </script>
+  <script src="{% static 'app/scripts/appl.js' %}"></script>
 </head>
 
 <body>
