--- a/app/templates/app/askcode.html
+++ b/app/templates/app/askcode.html
@@ -2,15 +2,30 @@
 
 {% block content %}
 
-<h2>{{ title }}.</h2>
-<h3>{{ message }}</h3>
+<h2>Что это?</h2>
 
-<h3>Let's ask code!</h3>
+<p class="lead">
+    Это простая система, с помощью которой выпускники 57-й школы помогут другу другу получить код вида
+</p>
+<blockquote>
+    lyc-1817g-pusha-834012543123
+</blockquote>
+<p class="lead">
+    Его можно указывать при голосованиях, чтобы ваш голос не пришлось перепроверять.
+</p>
 
-<form role="form" action="" method="post">
+<h3>Если у вас уже есть код</h3>
+<form role="form" action="" method="post" class="form-inline">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Submit</button>
+    <input type="text" class="form-control" name="code" value="" placeholder="Ваш код"/>
+    <button type="submit" class="btn btn-default">Проверить</button>
 </form>
+
+<h3>Где взять код?</h3>
+<ul>
+    <li>попросите у друзей-выпускников прислать вам приглашение личным секретным сообщением</li>
+    <li>если у вас нет друзей или у друзей нет кода, не грустите, подождите и попробуйте еще раз</li>
+    <li>если ничего не получилось, напишите побольше о себе на auth.alumni57@gmail.com</li>
+</ul>
 
 {% endblock %}
