--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -55,7 +55,15 @@
         <input type="submit" class="btn btn-default" value="Создать приглашение" />
     </div>
 </form>
+{% endif %}
 
+{% if invites %}
+<h3>Уже приглашённые</h3>
+<ul>
+{% for invite in invites %}
+    <li><a href="/invite/{{ invite.code_to.code }}" target="_blank">{{ invite.code_to.alumni }}</a></li>
+{% endfor %}
+</ul>
 {% endif %}
 
 {% endblock %}
