--- a/app/templates/app/invite.html
+++ b/app/templates/app/invite.html
@@ -20,15 +20,13 @@
 
 Выберете сообщение:<br/>
 <textarea style="width:600px; max-width:600px; height:70px;" class="form-control" onclick="this.focus();this.select()">
-http://auth.alumni57.ru/{{ code.code }} - здесь твой код для голосования выпускников 57-й
-</textarea>
+http://auth.alumni57.ru/{{ code.code }} - здесь твой код для голосования выпускников 57-й</textarea>
 <hr/>
 <textarea style="width:600px; max-width: 600px; height:150px;" class="form-control" onclick="this.focus();this.select()">
 Привет!
 Твой код для голосований выпускников 57-й
 {{ code.code }}
 Подробности есть на сайте
-http://auth.alumni57.ru
-</textarea>
+http://auth.alumni57.ru</textarea>
 
 {% endblock %}
