- moved new invite codes to session local collection - proper redirect for invite pages to get url with index within new code collection - invite/new and invite/0 separated - fixed new invites - urls with /57-.... working with redirect to url without code

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -73,7 +73,7 @@
 
 <p>Помогите знакомым выпускникам поскорее получить код!</p>
 
-<form action="/new-invitation" method="post" target="_blank" class="form-inline">
+<form action="/invite/new" method="post" target="_blank" class="form-inline">
     {% csrf_token %}
     <input type="hidden" name="invitee" value="" class="invitee-id" />
     <div class="form-group">
