Show other my invite codes

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -71,7 +71,9 @@
 <h3>Ваши другие приглашения</h3>
 
 <ul>
-  <li>57-xxxxx (пригласил XXXX) (отключить)</li>
+  {% for invite in other_invites %}
+  <li>{{ invite.safe_form }} (пригласил {{ invite.at }} - {{ invite.by }}) (отключить)</li>
+  {% endfor %}
 </ul>
 
 <p>* <i>отключите код, чтобы с его помощью никто не мог голосовать и приглашать других от вашего имени</i></p>
