New code page layout

--- a/app/templates/app/code.html
+++ b/app/templates/app/code.html
@@ -5,12 +5,18 @@
 <h2>Мой новый код</h2>
 
 <p class="lead">
-    Этот код никто другой не знает!
-    <strong>{{ code.code }}</strong>
+  <strong>{{ code.code }}</strong><br />
+  {{ alumni_name }}
 </p>
 
 <p class="lead">
-    Сохраните и используйте его, и к вам никто не сможет «подглядеть».
+  Этот код был только что сгенерирован для вас, его больше никто не видел.<br />
+  Вы можете отключить остальные и пользоваться только им.
+</p>
+
+<p class="lead">
+  Запишите код в надежное место или пошлите себе по почте или сообщением.<br />
+  После того, как вы закроете эту страницу, этот код целиком мы больше не покажем.
 </p>
 
 {% endblock %}
