--- a/app/templates/app/invite.html
+++ b/app/templates/app/invite.html
@@ -47,6 +47,7 @@
     <li>вы можете воспользоваться любым каналом связи: почтой, sms, сообщениями Facebook или ВКонтакте, продиктовать по телефону</li>
     <li>убедитесь, что код получит именно тот самый выпускник, которого вы решили пригласить. В этом ваша ответственность</li>
     <li>не пользуйтесь открытыми каналами связи для передачи кодов и ссылок, не публикуйте их в соцсетях</li>
+    <li>если вы закроете эту страницу, этот код целиком мы больше не покажем. Если понадобится, придется делать новый</li>
     <li>если вы будете невнимательны или сыграете не по правилам, увы, нам придется все это аннулировать и отключить</li>
 </ul>
 
